--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Election Day</title>
+    <title>Countdown to Election Day</title>
     <style>
         /* Set full-screen background */
         body, html {
@@ -57,7 +57,7 @@
 
     <!-- Smaller version of the background image below the timer -->
     <div class="image-container">
-        <img id="small-image" src="" alt="Cute picture">
+        <img id="small-image" src="" alt="harris">
     </div>
 
     <!-- JavaScript to Cycle Background Images -->
@@ -65,7 +65,7 @@
         // List of image files
         const images = [
 
-'IMG_6001.jpg'
+'pic1.jpg'
 
         ];
 
